# markr-stile-coding-challenge

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  THOUGHT_PROCESS_WITH_CLAUDE.md  docker-compose.yml  pyproject.toml
PROMPTS/: generate-impl-plan-extra.md  review-code-for-simplification.md
docs/superpowers/e2e/: final-smoke-latest.md  negative-matrix-latest.md  replay-restart-latest.md
lesson-learnt/: 2026-05-02-plan-review-execution-vs-design.md  2026-05-03-adversarial-qa-fix-postmortem.md  spec-bugs-only-council-found.md
scripts/: e2e_full_smoke.sh  e2e_negative_matrix.sh  e2e_replay_restart.sh
specs/: 2026-05-02-markr-design.md
spikes/: output_advisory_lock.md  output_asgi_bodycap.md  output_defusedxml.md  output_fastapi_handlers.md  output_pydantic_order.md  output_sa_async.md  output_settings.md  output_testcontainers_fixture.md  sig_defusedxml.py  sig_sa_async.py  sig_starlette_asgi_types.py  spike_advisory_lock.py  spike_asgi_bodycap.py  spike_defusedxml.py  spike_fastapi_handlers.py  spike_pydantic_order.py  spike_sa_async.py  spike_settings.py  spike_testcontainers_fixture.py
src/markr/: config.py  main.py
tests/: conftest.py  test_aggregation_math.py  test_aggregation_route.py  test_body_cap.py  test_body_cap_integration.py  test_config.py  test_content_type.py  test_dedup.py  test_errors.py  test_exception_handlers.py  test_health.py  test_ingestion_route.py  test_lifespan.py  test_pipeline.py  test_record_count_cap.py  test_repository.py  test_sample_round_trip.py  test_structure.py  test_validator.py  test_xml_parser.py
(+16 files in other folders)
